# urban-winner

./: .gitignore  README.md  justfile
.pi/plans/: 2026-04-28-2026-04-28-software-bugfix-benchmark-contract.md  2026-04-28-bootstrap-fixture.md  2026-04-28-swebench-fixture-conversion.md  2026-04-29-2026-04-29-deepagents-adapter-v2.md  2026-04-29-2026-04-29-deepagents-adapter.md
.pi/reviews/: 2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v1.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v12.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v13.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v2.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v3.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v4.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v6.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-gpt54-v9.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review-v1.md  2026-04-28-2026-04-28-eval-harness-design-v3-code-review.md  2026-04-29-2026-04-29-deepagents-adapter-code-review-v2.md  2026-04-29-2026-04-29-pydantic-ai-adapter-code-review-v1.md
.pi/specs/: 2026-04-28-eval-harness-design-v2.md  2026-04-28-software-bugfix-benchmark-contract.md  2026-04-29-deepagents-adapter.md  2026-04-29-pydantic-ai-adapter.md
.pi/todos/: 012985d7.md  1342fa54.md  4f8d5efc.md  9d4a65e1.md  fa1c0ce6.md
cases/: README.md  psf__requests-1921.failure_output.txt  pylint-dev__pylint-7080.failure_output.txt  pylint-dev__pylint-7080.json  pytest-dev__pytest-7571.failure_output.txt  pytest-dev__pytest-7571.json
evals/: README.md
evals/evals/: campaign.py  cli.py  discovery.py  env.py  pipeline.py  process_tree.py  runner.py  schemas.py  setup.py  status.py  workspace.py
evals/tests/: campaign_test.py  cli_test.py  conftest.py  discovery_test.py  env_test.py  pipeline_test.py  readme_test.py  resume_test.py  runner_test.py  schemas_test.py  setup_test.py  status_test.py  workspace_test.py
fixtures/parse_duration/: pyproject.toml
fixtures/parse_duration/parse_duration/: __init__.py  parser.py  units.py
fixtures/pylint-dev__pylint-7080/: pyproject.toml
fixtures/pytest-dev__pytest-7571/: pyproject.toml
frameworks/agentcore/: README.md  run.sh
frameworks/claude-agent-sdk/: README.md  run.sh
frameworks/deepagents/: README.md  adapter.py  pyproject.toml  run.sh  test_adapter.py
frameworks/google-adk/: README.md  run.sh
frameworks/mastra/: README.md  run.sh
shared/: task-spec.md
(+22 files in other folders)
